# ChangeLog for media-libs/glew
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/glew/ChangeLog,v 1.38 2008/12/02 21:10:37 ssuominen Exp $

*glew-1.5.1 (02 Dec 2008)

  02 Dec 2008; <ssuominen@gentoo.org> +glew-1.5.1.ebuild:
  Version bump, thanks to Donnie Berkholz.

  15 Jan 2008; Raúl Porcel <armin76@gentoo.org> glew-1.4.0.ebuild:
  ia64 stable wrt #197162

  11 Jan 2008; nixnut <nixnut@gentoo.org> glew-1.4.0.ebuild:
  Stable on ppc wrt bug 197162

  09 Jan 2008; Markus Meier <maekke@gentoo.org> glew-1.4.0.ebuild:
  x86 stable, bug #197162

  09 Jan 2008; Ferris McCormick <fmccor@gentoo.org> glew-1.4.0.ebuild:
  Sparc stable --- Bug #197162 --- glewinfo and visualinfo work fine.

*glew-1.5.0 (08 Jan 2008)

  08 Jan 2008; Samuli Suominen <drac@gentoo.org> +glew-1.5.0.ebuild:
  Version bump.

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> glew-1.4.0.ebuild:
  Use correct AR target, amd64 stable.

  04 Dec 2007; Ferris McCormick <fmccor@gentoo.org>
  -files/glew-1.3.3-multilib.patch, -files/glew-1.3.4-makefile.patch,
  -glew-1.3.3.ebuild, -glew-1.3.4.ebuild, -glew-1.3.4-r1.ebuild,
  -glew-1.3.4-r2.ebuild, glew-1.3.5.ebuild:
  Sparc stable, old versions cleaned up (Bug #198771)

  11 Nov 2007; Samuli Suominen <drac@gentoo.org> glew-1.3.5.ebuild:
  amd64 stable

*glew-1.4.0 (04 Nov 2007)

  04 Nov 2007; Samuli Suominen <drac@gentoo.org> +glew-1.4.0.ebuild:
  Version bump.

  24 Oct 2007; Jeroen Roovers <jer@gentoo.org> glew-1.3.5.ebuild:
  Marked ~hppa (bug #196836).

  23 Oct 2007; Joe Peterson <lavajoe@gentoo.org> glew-1.3.5.ebuild:
  Add ~x86-fbsd keyword

  29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing joshuabaergen from metadata due to his retirement (see #92210 for
  reference).

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> glew-1.3.5.ebuild:
  ppc. stable

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>
