@@ -1,4 +1,4 @@
 DIST glew-1.5.1-src.tgz 394566 RMD160 920fdff559976492a2e6acf93d3b02e8286f6b7b SHA1 a94113169d46487ccda1bb2fde68fa1803bdf009 SHA256 89e63d085cb563c32a191e3cd4907a192484f10438a6679f1349456db4b9c10a
-EBUILD glew-1.5.1.ebuild 1229 RMD160 41be3e12d2498a60d96e7702562df08edc33272a SHA1 b60dfd8cac7f8a4964d1fb591fda02835f3aa3c7 SHA256 2dc0a107ef30f7b03123d9fb3c4de8607e099fd1166ad6f4d389c8028e55ac0b
-MISC ChangeLog 4922 RMD160 69690b375c2ac06048e862df3e847962dcb31c1c SHA1 768cb7c1cf4e5215617a1393497252d87c1e5464 SHA256 180c141dee78939fea632b46d360ac86706b8b310b03bdca9554f723fec541d2
+EBUILD glew-1.5.1.ebuild 1343 RMD160 5be480b6d6439a23749c242291769578dcce52cb SHA1 3a9e907bfc40501780871d6068039207f7b29204 SHA256 a43c4cb32970abaaff24a430f44b4899ae42cdd711b4caf6610637abf79ea9fe
+MISC ChangeLog 5111 RMD160 832e77bb5cbe86bf374d876ae2d3bbf7090ae945 SHA1 001bc4db1116d373084947353fb2644a4cc430d6 SHA256 112b1511abc7d62950e60ad4c118ddcc822e01d6eb19b3b25df1e2405ef95d6a
 MISC metadata.xml 236 RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae SHA1 dd1a8550a514e55ab0ed6190ab4794bb090994f8 SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829
