@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/glew/glew-1.5.1.ebuild,v 1.1 2008/12/02 21:10:37 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/glew/glew-1.5.1.ebuild,v 1.2 2009/04/30 17:56:59 arfrever Exp $
 
 inherit eutils multilib toolchain-funcs
 
@@ -15,29 +15,34 @@ IUSE=""
 
 DEPEND="virtual/opengl
 	virtual/glu"
+RDEPEND="${DEPEND}"
 
 S=${WORKDIR}/${PN}
 
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
-	edos2unix config/config.guess
-	sed -i -e 's:-s\b::g' Makefile || die "sed failed."
+	edos2unix config/config.guess Makefile
+	sed -i \
+		-e 's:-s\b::g' \
+		-e '95s:$(CFLAGS):& $(LDFLAGS):' \
+		-e '98s:$(CFLAGS):& $(LDFLAGS):' \
+		Makefile || die "sed failed"
 	# for Prefix
 	sed -i -e '/^LDFLAGS.EXTRA/d' config/Makefile.linux || die
 	# don't do stupid Solaris specific stuff that won't work in Prefix
-	cp config/Makefile.linux config/Makefile.solaris
+	cp config/Makefile.linux config/Makefile.solaris || die
 }
 
 src_compile(){
 	emake LD="$(tc-getCC) ${LDFLAGS}" CC="$(tc-getCC)" \
 		POPT="${CFLAGS}" M_ARCH="" AR="$(tc-getAR)" \
-		|| die "emake failed."
+		|| die "emake failed"
 }
 
 src_install() {
 	emake GLEW_DEST="${ED}/usr" LIBDIR="${ED}/usr/$(get_libdir)" \
-		M_ARCH="" install || die "emake install failed."
+		M_ARCH="" install || die "emake install failed"
 
 	dodoc README.txt
 	dohtml doc/*.{html,css,png,jpg}
