@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/glew
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/glew/ChangeLog,v 1.38 2008/12/02 21:10:37 ssuominen Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/glew/ChangeLog,v 1.39 2009/04/30 17:56:59 arfrever Exp $
+
+  30 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -glew-1.3.5.ebuild, -glew-1.5.0.ebuild, glew-1.5.1.ebuild:
+  Respect LDFLAGS (bug #267908). Remove older ebuilds.
 
 *glew-1.5.1 (02 Dec 2008)
 
